manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-lilsecret
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - lilsecret.norik.io
      secretName: lilsecret-tls
  rules:
    - host: lilsecret.norik.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lilsecret
                port:
                  number: 80
  ingressClassName: nginx
